<resources>
    <string name="app_name">Helping Hand</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome to VolunteeringApp</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="register_new_account_string">Register new account</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="register_success_string">Registration successful!</string>
    <string name="register_failed_string">Registration failed! Please try again later.</string>
    <string name="login_success_string">Login successful!</string>
    <string name="login_failed_string">Login failed! Email or password is wrong!</string>
    <string name="title_string">Title</string>
    <string name="enter_title_string">Enter Title</string>
    <string name="description_string">Description</string>
    <string name="enter_description_string">Enter Description</string>
    <string name="capacity_string">Enrollment/Capacity</string>
    <string name="enter_capacity_string">Enter Capacity</string>
    <string name="address_string">Address</string>
    <string name="enter_street_string">Enter Street</string>
    <string name="enter_city_string">Enter City</string>
    <string name="enter_state_string">Enter State</string>
    <string name="enter_postal_code_string">Enter Postal Code</string>
    <string name="start_date_string">Start Date</string>
    <string name="start_time_string">Start Time</string>
    <string name="end_date_string">End Date</string>
    <string name="end_time_string">End Time</string>
    <string name="no_time_set_string">00:00</string>
    <string name="no_date_set_string">0000–00–00</string>
    <string name="choose_date_string">Choose Date</string>
    <string name="choose_time_string">Choose Time</string>
    <string name="cancel_string">Cancel</string>
    <string name="post_string">Post</string>
    <string name="post_new_event_string">Post New Event</string>
    <string name="capacity_full_string">Full!</string>
    <string name="sign_up_string">Sign Up</string>
    <string name="drop_string">Drop</string>
    <string name="no_account">Don\'t have an account? Register Here</string>
    <string name="has_account">Already a member? Login</string>
    <string name="saved_string">Saved:</string>
    <string name="edit_string">Edit</string>
    <string name="save_string">Save</string>
    <string name="delete_string">Delete</string>
    <string name="clear_string">Clear</string>
    <string name="apply_string">Apply</string>
    <string name="filters_string">Filters</string>
</resources>
