<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <!-- Title -->

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_string"/>

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel"
        android:ems="8"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <!-- Description -->

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:text="@string/description_string"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descriptionLabel"
        android:hint="@string/enter_description_string"
        android:inputType="textMultiLine"
        android:lines="2">
    </EditText>

    <!-- Enrollment/Capacity -->

    <TextView
        android:id="@+id/enrollment_and_capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description"
        android:layout_marginTop="8dp"
        android:text="@string/capacity_string"/>

    <EditText
        android:id="@+id/capacity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enrollment_and_capacity"
        android:hint="@string/enter_capacity_string"
        android:inputType="number">
    </EditText>

    <!-- Address -->

    <TextView
        android:id="@+id/addressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capacity"
        android:layout_marginTop="8dp"
        android:text="@string/address_string"/>

    <EditText
        android:id="@+id/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addressLabel"
        android:hint="@string/enter_street_string"
        android:inputType="textPostalAddress">
    </EditText>

    <EditText
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/street"
        android:hint="@string/enter_city_string"
        android:inputType="textCapSentences">
    </EditText>

    <EditText
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:hint="@string/enter_state_string"
        android:inputType="textCapCharacters">
    </EditText>

    <EditText
        android:id="@+id/postalCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/city"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_postal_code_string"
        android:inputType="number">
    </EditText>

    <!-- Time/Date -->

    <TextView
        android:id="@+id/startDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/state"
        android:layout_marginTop="12dp"
        android:text="@string/start_date_string"/>

    <TextView
        android:id="@+id/startTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/state"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/start_time_string"/>

    <TextView
        android:id="@+id/startDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDateLabel"
        android:layout_marginTop="8dp"
        android:text="@string/no_date_set_string"/>

    <TextView
        android:id="@+id/startTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/startTimeLabel"
        android:layout_marginTop="8dp"
        android:text="@string/no_time_set_string"/>

    <Button
        android:id="@+id/startDate_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/startDate"
        android:text="@string/choose_date_string"/>

    <Button
        android:id="@+id/startTime_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/startDate_picker_button"
        android:layout_below="@id/startTime"
        android:layout_marginTop="4dp"
        android:text="@string/choose_time_string"/>

    <TextView
        android:id="@+id/endDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startDate_picker_button"
        android:layout_marginTop="12dp"
        android:text="@string/end_date_string"/>

    <TextView
        android:id="@+id/endTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startTime_picker_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:text="@string/end_time_string"/>

    <TextView
        android:id="@+id/endDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/endDateLabel"
        android:layout_marginTop="8dp"
        android:text="@string/no_date_set_string"/>

    <TextView
        android:id="@+id/endTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/endTimeLabel"
        android:layout_marginTop="8dp"
        android:text="@string/no_time_set_string"/>

    <Button
        android:id="@+id/endDate_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_below="@id/endDate"
        android:text="@string/choose_date_string"/>

    <Button
        android:id="@+id/endTime_picker_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/endDate_picker_button"
        android:layout_below="@id/endTime"
        android:layout_marginTop="4dp"
        android:text="@string/choose_time_string"/>

    <!-- Buttons -->

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="12dp"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@id/cancel"
        android:layout_toEndOf="@id/cancel"
        android:text="@string/post_string" />

</RelativeLayout>