<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@id/description"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtFromDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:layout_below="@id/address"
        android:layout_alignParentStart="true"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/txtToDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:layout_below="@id/address"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtToDate"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up_string" />

    <Button
        android:id="@+id/drop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtToDate"
        android:layout_centerHorizontal="true"
        android:text="@string/drop_string" />

    <!--<Button
        android:id="@+id/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtToDate"
        android:layout_centerHorizontal="true"
        android:text="@string/edit_string" />-->

    <!--TODO Show edit button only when a user is viewing their created events-->
    <!--TODO Show the past chosen details for an event when a user clicks to edit an event from the "My Created Events" list view-->

    <TextView
        android:id="@+id/capacityFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtToDate"
        android:layout_centerHorizontal="true"
        android:text="@string/capacity_full_string"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/saved"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/signUp"
        android:layout_toStartOf="@id/savedCheckBox"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/saved_string"
        android:textStyle="bold"/>

    <CheckBox
        android:id="@+id/savedCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/signUp"
        android:layout_alignParentEnd="true"
        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

</RelativeLayout>